--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,900" rel="stylesheet"> 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://use.fontawesome.com/d1388a0a18.js"></script>
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
@@ -14,13 +15,14 @@
      <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
         	<div class="navbar-header">
-        	    <button type="button" class="navbar-toggle collapsed" data-toggle="collapsed" data-toggle="collapse">
+        	    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse">
         	       <span class="sr-only">Toggle navigation</span>
         		   <span class="icon-bar"></span>
         		   <span class="icon-bar"></span>
         		   <span class="icon-bar"></span>
         		</button>   
         	</div>
+
             <div class="navbar-collapse collapse">
             	<ul class="nav navbar-nav navbar-right">
             		<li><a href="#sumo">Sumo</a></li>
@@ -32,6 +34,24 @@
         </div>
      	
      </nav>
-  </section>	
+
+  <div class="container" id="sumo">
+  	<div class="row">
+  		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+  		   <h1>LANDING SUMO</h1>
+  		</div>
+  	</div>
+  	<div class="row">
+  		<div class="col-md-offset-5 col-md-2 col-xs-offset-3 col-xs-6">
+  		    <div class="line"></div>
+  		</div>
+  	</div>
+  	<div class="row">
+  		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+  			<h3 id="showApp">SHOW YOUR APP WITH STYLE</h3>
+  		</div>
+  	</div>
+  </div>
+  </section>
 </body>
 </html>
