texto mas imagen de celular

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <!-- menu responsive navbar-collapse -->
-  <section class="first-section">
+<section class="first-section">
      <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
         	<div class="navbar-header">
@@ -52,6 +52,58 @@
   		</div>
   	</div>
   </div>
-  </section>
+</section>
+<section class="second-section" id="features">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+				<h3 class="app">OUR APP FEATURES</h3>
+			</div>
+		</div>
+<!-- informacion del lado izquierdo -->
+   <div class="row">
+   	   <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+   	   	   <div class="features">
+   	   	   	   <h4 class="title-second">Well Coded</h4>
+   	   	   	   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat sapiente</p>
+   	   	   </div>
+   	   	   <div class="features">
+   	   	   	   <h4 class="title-second">Documented</h4>
+   	   	   	   <p>distinctio excepturi iusto, amet eos placeat eum itaque odio fugiat ratione magnam aspernatur cum nesciunt minus adipisci totam.</p>
+   	   	   </div>
+   	   	   <div class="features">
+   	   	   	   <h4 class="title-second">Free Support</h4>
+   	   	   	   <p> odio fugiat ratione magnam aspernatur cum nesciunt minus adipisci totam.</p>
+   	   	   </div>
+   	   	    <div class="features">
+   	   	   	   <h4 class="title-second">Developer</h4>
+   	   	   	   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error quia quisquam ducimus, </p>
+   	   	   </div>
+   	   </div> 
+   	   <div class="col-md-4 hidden-sm hidden-xs">
+   	   	   <img src="img/phone.png" alt="phone" class="img-responsive">
+   	   </div>
+      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+           <div class="features">
+           	   <h4 class="title-second">Design</h4>
+           	   <p>st deserunt? Culpa sit aliquam nobis cumque quia sequi provident eos, quas non voluptate itaque sapiente minima beatae.</p>
+           </div>
+           <div class="features">
+           	   <h4 class="title-second">Valid HTML5</h4>
+           	   <p>Pulpa ñaaw Culpa sit aliquam nobis cumque quia sequi provident eos, quas non voluptate itaque sapiente minima beatae.</p>
+           </div>
+           <div class="features">
+           	   <h4 class="title-second">Bootstrap</h4>
+           	   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita ipo.</p>
+           </div>
+           <div class="features">
+           	   <h4 class="title-second">Awesome Bundle</h4>
+           	   <p>Consectetur adipisicing elit. Expedita in, distinctio culpa est deserunt? Culpa sitio pe</p>
+           </div>
+      	 
+      </div>
+   </div>
+   </div>
+</section>
 </body>
 </html>
