--- a/index.html
+++ b/index.html
@@ -105,5 +105,72 @@
    </div>
    </div>
 </section>
+
+<section class="third-section" id="download">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+				<h3 class="app">DOWNLOAD OUR APP</h3>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-lg-offset-4 col-lg-4 col-md-offset-4 col-md-4 col-sm-12 col-xs-12 text-center">
+			<p> facilis obcaecati nulla ipsum, repellendus rem alias. Natus, similique.</p>
+		</div>
+	</div>
+	<div class="row btns">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			<button type="button" class="btn btn-primary btn-lg btn-block">App Store</button>
+			<button type="button" class="btn btn-default btn-lg btn-block">App Store</button>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-lg-offset-3 col-lg-6 col-md-offset-3 col-md-6 col-sm-12 col-xs-12">
+			<h3 class="app text-center">Subscribe to our newsletter</h3>
+			<div class="input-group">
+				<input type="email" class="form-control" placeholder="your email...">
+				<span class="input-group-btn">
+					<button class="btn btn-default" type="button">
+						Suscribete
+					</button>
+				</span>
+			</div>
+		</div>
+	</div>
+</section>
+<section class="third-section" id="download">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+				<h3 class="app">DOWNLOAD OUR APP</h3>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-offset-4 col-lg-4 col-md-offset-4 col-md-4 col-sm-4 col-xs-12 text-center">
+				<h3 class="app">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+				<button type="button" class="btn btn-primary btn-lg btn-block">App Store</button>
+				<button type="button" class="btn btn-default btn-lg btn-block">play store</button>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-offset-3 col-lg-6 col-md-offset-3 col-md-6 col-sm-12 col-xs-12">
+				<h3 class="app text-center">Suscribete to our newsletter</h3>
+				<div class="input-group">
+					<input type="email" class="form-control" placeholder="you email...">
+					<span class="input-group-btn">
+						<button class="btn btn-default" type="button">Suscribete</button>
+					</span>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+
 </body>
 </html>
